# HUSK

./: .gitignore  Bug_Reporting_Guide.md  DEVELOPMENT.md  Function_Calling_Guide.md  HUSK_Ambient_Scribe_Feature_Plan.md  HUSK_Feature_Research_MEGA.md  HUSK_UI_REFINEMENT_PLAN.md  LUMEN_DEEP_DIVE.md  README.md  design_philosophy.md  husk_generative_art.html
.claude/: settings.json
Android/: README.md
Android/src/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
HUSK_feature_research/: README.md
HUSK_feature_research/core-architecture-and-models/: 01-stack-overview-and-architecture-context.md  06-gemma-4-e2b-e4b-deep-dive.md  07-litert-lm-feature-matrix.md
HUSK_feature_research/inference-optimization/: 04-turboquant-kv-cache-compression.md  14-speculative-decoding-and-inference-optimization.md  40-sub-4-bit-quantization.md  41-persistent-kv-cache-and-prompt-caching.md  42-flash-attention-and-mobile-gpu-attention-variants.md  43-cpu-gpu-npu-heterogeneous-compute-scheduling.md  44-npu-acceleration-deep-dive.md  45-adaptive-compute-early-exit-and-layer-skipping.md  46-battery-and-thermal-management-for-sustained-inference.md  47-litert-lm-vs-gguf-format-comparison.md  48-prefill-chunking-and-ttft-optimization.md
HUSK_feature_research/intelligence-and-tool-use/: 02-mcp-model-context-protocol-support.md  03-rag-retrieval-augmented-generation-support.md  09-on-device-agent-skills-expansion.md  10-function-calling-and-constrained-decoding.md  24-structured-output-and-json-mode.md  25-sandboxed-code-execution.md
docs/: ARCHITECTURE.md
lessons/: 2026-04-13-rag-sdk-integration.md  2026-04-13-thinking-mode-required-for-tools.md  2026-04-14-audio-decoder-oom-large-files.md  2026-04-14-model-allowlist-runtime-loading.md  2026-04-14-thermal-api-permissions.md  2026-04-14-whisper-jni-native-build.md
model_allowlists/: 1_0_11.json  README.md
skills/: README.md
(+219 files in other folders)
